--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -1,6 +1,7 @@
+<h1>project - {{project.projectName}}</h1>
 <a [routerLink]="[ '/projects' ]">back to overview</a><br>
 <a [routerLink]="[ '/admin/projects', project._id ]">edit</a>
-<div class="projectFiche">
+<div class="projectFiche striped">
   <div class="projectSection">
     <div class="item">
       <div class="label">company</div>
