--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -3,12 +3,14 @@
 <a [routerLink]="[ '/admin/projects', project._id ]">edit</a>
 <div class="projectFiche striped">
   <div class="projectSection">
+    <h2>Bedrijf</h2>
     <div class="item">
       <div class="label">company</div>
       <div class="value">{{project.company}}</div>
     </div>
   </div>
   <div class="projectSection">
+    <h2>Project</h2>
     <div class="item">
       <div class="label">dateCreated</div>
       <div class="value">{{project.dateCreated}}</div>
@@ -31,6 +33,7 @@
     </div>
   </div>
   <div class="projectSection">
+    <h2>Adres</h2>
     <div class="item">
       <div class="label">street</div>
       <div class="value">{{project.street}}</div>
@@ -49,6 +52,7 @@
     </div>
   </div>
   <div class="projectSection">
+    <h2>Contactpersoon</h2>
     <div class="item">
       <div class="label">name</div>
       <div class="value">{{project.name}}</div>
@@ -71,6 +75,7 @@
     </div>
   </div>
   <div class="projectSection">
+    <h2>Technische gegevens</h2>
     <div class="item">
       <div class="label">ATest</div>
       <div class="value">{{project.ATest}}</div>
@@ -85,6 +90,7 @@
     </div>
   </div>
   <div class="projectSection">
+    <h2>Infiltro</h2>
     <div class="item">
       <div class="label">executor</div>
       <div class="value">{{project.executor}}</div>
