--- a/src/app/components/single-project/single-project.component.html
+++ b/src/app/components/single-project/single-project.component.html
@@ -76,15 +76,15 @@
   </div>
   <div class="projectSection">
     <h2>Technische gegevens</h2>
-    <div class="item">
+    <div class="item textarea">
       <div class="label">ATest</div>
       <div class="value">{{project.ATest}}</div>
     </div>
-    <div class="item">
+    <div class="item textarea">
       <div class="label">v50Value</div>
       <div class="value">{{project.v50Value}}</div>
     </div>
-    <div class="item">
+    <div class="item textarea">
       <div class="label">protectedVolume</div>
       <div class="value">{{project.protectedVolume}}</div>
     </div>
