--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,3 +1,17 @@
-<p>
-  map works!
-</p>
+<agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom" [disableDefaultUI]="true" [zoomControl]="true">
+
+  <agm-marker *ngFor="let m of markers" [latitude]="m.lat"
+    [longitude]="m.lng" [label]="m.executor.substring(0,1).toUpperCase()">
+
+    <agm-info-window>
+      <h2>{{m.title}}</h2>
+      <p>Adres: {{m.street}}, {{m.postalCode}} {{m.city}}</p>
+      <p>Datum: {{formatDate(m.datePlanned)}}</p>
+      <p>Uur: {{m.hourPlanned}}</p>
+      <p>Status: {{m.status}}</p>
+      <p>Uitvoerder: {{m.executor}}</p>
+    </agm-info-window>
+
+  </agm-marker>
+
+</agm-map>
